--- a/services.html
+++ b/services.html
@@ -710,7 +710,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
-					<a href="index.html">
+					<a href="nutekgroup.org">
 						<img class="logo-img" src="images/logo.png" style="height: 4.3rem;">
 					</a>
 				</span>
@@ -726,17 +726,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
                         <li class="nav-item">
-                            <a class="nav-link link text-black display-4" href="about.html">About</a>
+                            <a class="nav-link link text-black display-4" href="about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link text-black display-4" href="services.html" aria-expanded="false">Services</a>
+                            <a class="nav-link link text-black display-4" href="services" aria-expanded="false">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link text-black display-4" href="contact.html">Contact</a>
+                            <a class="nav-link link text-black display-4" href="contact">Contact</a>
                         </li>
                     </ul>
                     <div class="navbar-buttons mbr-section-btn">
-                        <a class="btn btn-primary display-4" href="contact.html">Get Quote</a>
+                        <a class="btn btn-primary display-4" href="contact">Get Quote</a>
                     </div>
                 </div>
             </div>
@@ -893,7 +893,7 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Automation and Panel Design</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">PLC Programmin</p>
-                            <div class="mbr-section-btn item-footer"><a href="industrial.html" class="btn item-btn btn-primary display-7">Explore</a></div>
+                            <div class="mbr-section-btn item-footer"><a href="industrial" class="btn item-btn btn-primary display-7">Explore</a></div>
                         </div>
                     </div>
                 </div>
@@ -908,7 +908,7 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical Wiring</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Issuing of Certificate Of Compliance</p>
-                            <div class="mbr-section-btn item-footer"><a href="residential.html" class="btn item-btn btn-primary display-7">Explore</a></div>
+                            <div class="mbr-section-btn item-footer"><a href="residential" class="btn item-btn btn-primary display-7">Explore</a></div>
                         </div>
                     </div>
                 </div>
@@ -923,7 +923,7 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical installations and commissioning</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Fault Finding</p>
-                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Explore</a></div>
+                            <div class="mbr-section-btn item-footer"><a href="contact" class="btn item-btn btn-primary display-7">Explore</a></div>
                         </div>
                     </div>
                 </div>
@@ -938,7 +938,7 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical repairs and maintenance</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Emergency shutdowns</p>
-                            <div class="mbr-section-btn item-footer"><a href="callouts.html" class="btn item-btn btn-primary display-7">Explore</a></div>
+                            <div class="mbr-section-btn item-footer"><a href="callouts" class="btn item-btn btn-primary display-7">Explore</a></div>
                         </div>
                     </div>
                 </div>
