--- a/contact.html
+++ b/contact.html
@@ -710,7 +710,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
-					<a href="index.html">
+					<a href="nutekgroup.org">
 						<img class="logo-img" src="images/logo.png" style="height: 4.3rem;">
 					</a>
 				</span>
@@ -726,17 +726,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
                         <li class="nav-item">
-                            <a class="nav-link link text-black display-4" href="about.html">About</a>
+                            <a class="nav-link link text-black display-4" href="about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link text-black display-4" href="services.html" aria-expanded="false">Services</a>
+                            <a class="nav-link link text-black display-4" href="services" aria-expanded="false">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link text-black display-4" href="contact.html">Contact</a>
+                            <a class="nav-link link text-black display-4" href="contact">Contact</a>
                         </li>
                     </ul>
                     <div class="navbar-buttons mbr-section-btn">
-                        <a class="btn btn-primary display-4" href="contact.html">Get Quote</a>
+                        <a class="btn btn-primary display-4" href="contact">Get Quote</a>
                     </div>
                 </div>
             </div>
