--- a/services.html
+++ b/services.html
@@ -882,7 +882,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="item features-image col-12 col-md-6 col-lg-3 active">
+                <div class="item features-image col-12 col-md-6 col-lg-4 active">
                     <div class="item-wrapper">
                         <div class="item-img mb-3">
                             <img src="assets/images/photo-1509391111737-9b07f052f6b6.jpeg">
@@ -892,12 +892,12 @@
                                 <strong><a class="text-black fw-bold" href="#">Industrial</a></strong>
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Automation and Panel Design</p>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">PLC Programmin</p>
+                            <p class="mbr-text mbr-fonts-style mb-3 display-7">PLC Programming</p>
                             <div class="mbr-section-btn item-footer"><a href="industrial" class="btn item-btn btn-primary display-7">Explore</a></div>
                         </div>
                     </div>
                 </div>
-                <div class="item features-image col-12 col-md-6 col-lg-3">
+                <div class="item features-image col-12 col-md-6 col-lg-4">
                     <div class="item-wrapper">
                         <div class="item-img mb-3">
                             <img src="images/construction.jpg" data-slide-to="1" data-bs-slide-to="1">
@@ -912,25 +912,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="item features-image col-12 col-md-6 col-lg-3">
+                <div class="item features-image col-12 col-md-6 col-lg-4">
                     <div class="item-wrapper">
                         <div class="item-img mb-3">
-                            <img src="assets/images/photo-1518181835702-6eef8b4b2113.jpeg" data-slide-to="2" data-bs-slide-to="2">
-                        </div>
-                        <div class="item-content align-left">
-                            <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5">
-                                <strong><a class="text-black fw-bold" href="#">Commercial</a></strong>
-                            </h6>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical installations and commissioning</p>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Fault Finding</p>
-                            <div class="mbr-section-btn item-footer"><a href="contact" class="btn item-btn btn-primary display-7">Explore</a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item features-image col-12 col-md-6 col-lg-3">
-                    <div class="item-wrapper">
-                        <div class="item-img mb-3">
-                            <img src="images/callout.jpg" data-slide-to="3" data-bs-slide-to="3">
+                            <img src="images/callouts.jpg" data-slide-to="3" data-bs-slide-to="3">
                         </div>
                         <div class="item-content align-left">
                             <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5">
