--- a/callouts.html
+++ b/callouts.html
@@ -710,7 +710,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
-					<a href="index.html">
+					<a href="nutekgroup.org">
 						<img class="logo-img" src="images/logo.png" style="height: 4.3rem;">
 					</a>
 				</span>
@@ -726,17 +726,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
                         <li class="nav-item">
-                            <a class="nav-link link text-black display-4" href="about.html">About</a>
+                            <a class="nav-link link text-black display-4" href="about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link text-black display-4" href="services.html" aria-expanded="false">Services</a>
+                            <a class="nav-link link text-black display-4" href="services" aria-expanded="false">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link text-black display-4" href="contact.html">Contact</a>
+                            <a class="nav-link link text-black display-4" href="contact">Contact</a>
                         </li>
                     </ul>
                     <div class="navbar-buttons mbr-section-btn">
-                        <a class="btn btn-primary display-4" href="contact.html">Get Quote</a>
+                        <a class="btn btn-primary display-4" href="contact">Get Quote</a>
                     </div>
                 </div>
             </div>
@@ -898,65 +898,48 @@
                 </div>
             </div>
             <div class="row">
-                <div class="item features-image col-12 col-md-6 col-lg-3 active">
+                <div class="item features-image col-12 col-md-6 col-lg-4 active">
                     <div class="item-wrapper">
                         <div class="item-img mb-3">
-                            <img src="assets/images/photo-1509391111737-9b07f052f6b6.jpeg">
+                            <img src="images/repair.jpg">
                         </div>
                         <div class="item-content align-left">
                             <h6 class="item-subtitle mbr-fonts-style mb-3 display-5">
-                                <strong><a class="text-black fw-bold" href="#">Industrial</a></strong>
+                                <strong><a class="text-black fw-bold" href="#">Repair and Maintenance</a></strong>
                             </h6>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Automation and Panel Design</p>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">PLC Programmin</p>
-                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Quote</a></div>
+                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Panel Design and Upgrades</p>
+                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Appliance Circuit Repair</p>
+                            <div class="mbr-section-btn item-footer"><a href="contact" class="btn item-btn btn-primary display-7">Quote</a></div>
                         </div>
                     </div>
                 </div>
-                <div class="item features-image col-12 col-md-6 col-lg-3">
+                <div class="item features-image col-12 col-md-6 col-lg-4">
                     <div class="item-wrapper">
                         <div class="item-img mb-3">
-                            <img src="images/construction.jpg" data-slide-to="1" data-bs-slide-to="1">
+                            <img src="images/tesing.jpg" data-slide-to="1" data-bs-slide-to="1">
                         </div>
                         <div class="item-content align-left">
                             <h6 class="item-subtitle mbr-fonts-style mb-3 display-5">
-                                <strong><a class="text-black fw-bold" href="#">Construction</a></strong>
+                                <strong><a class="text-black fw-bold" href="#">Testing</a></strong>
                             </h6>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical Wiring</p>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Issuing of Certificate Of Compliance</p>
-                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Quote</a></div>
+                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical System Testing</p>
+                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Ground Fault</p>
+                            <div class="mbr-section-btn item-footer"><a href="contact" class="btn item-btn btn-primary display-7">Quote</a></div>
                         </div>
                     </div>
                 </div>
-                <div class="item features-image col-12 col-md-6 col-lg-3">
+                <div class="item features-image col-12 col-md-6 col-lg-4">
                     <div class="item-wrapper">
                         <div class="item-img mb-3">
-                            <img src="assets/images/photo-1518181835702-6eef8b4b2113.jpeg" data-slide-to="2" data-bs-slide-to="2">
+                            <img src="images/emergency.jpg" data-slide-to="3" data-bs-slide-to="3">
                         </div>
                         <div class="item-content align-left">
                             <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5">
-                                <strong><a class="text-black fw-bold" href="#">Commercial</a></strong>
-                            </h6>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical installations and commissioning</p>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Fault Finding</p>
-                            <div class="mbr-section-btn item-footer">
-                                <a href="contact.html" class="btn item-btn btn-primary display-7">Quote</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item features-image col-12 col-md-6 col-lg-3">
-                    <div class="item-wrapper">
-                        <div class="item-img mb-3">
-                            <img src="images/callout.jpg" data-slide-to="3" data-bs-slide-to="3">
-                        </div>
-                        <div class="item-content align-left">
-                            <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5">
-                                <strong><a class="text-black fw-bold" href="#">Callouts</a></strong>
+                                <strong><a class="text-black fw-bold" href="#">Emergency</a></strong>
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical repairs and maintenance</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Emergency shutdowns</p>
-                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Quote</a></div>
+                            <div class="mbr-section-btn item-footer"><a href="contact" class="btn item-btn btn-primary display-7">Quote</a></div>
                         </div>
                     </div>
                 </div>
