--- a/residential.html
+++ b/residential.html
@@ -925,8 +925,8 @@
                             <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5">
                                 <strong><a class="text-black fw-bold" href="#">Electrical Installations</a></strong>
                             </h6>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Circuit installations and commissioning</p>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Backup power</p>
+                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Circuit Installations and Commissioning</p>
+                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Backup Power</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Fault Finding</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Wiring and Electric Fencing</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Solar Energy Systems</p>
@@ -945,7 +945,7 @@
                             <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5">
                                 <strong><a class="text-black fw-bold" href="#">Inspections</a></strong>
                             </h6>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical Saftey Inpsections</p>
+                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical Saftey Inspections</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Issue Certificate of Compliance (COC's)</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Track Lighting and Bulb Replacements</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Earth Leakage and Surge Portection</p>
