--- a/residential.html
+++ b/residential.html
@@ -947,8 +947,8 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical Saftey Inspections</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Issue Certificate of Compliance (COC's)</p>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Track Lighting and Bulb Replacements</p>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Earth Leakage and Surge Portection</p>
+                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Lighting and Bulb Replacements</p>
+                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Earth Leakage and Surge Protection</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Wiring and Plugs</p>
                             <div class="mbr-section-btn item-footer"><a href="contact" class="btn item-btn btn-primary display-7">Quote</a></div>
                         </div>
@@ -1227,7 +1227,7 @@
                                 <strong>Power Hours</strong>
                             </h6>
                             <p class="mbr-text mbr-fonts-style display-7 ">
-                                Mon-Sat: 24hrs
+                                Mon-Sun: 24hrs
                             </p>
                         </div>
                     </div>
