--- a/callouts.html
+++ b/callouts.html
@@ -937,8 +937,8 @@
                             <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5">
                                 <strong><a class="text-black fw-bold" href="#">Emergency</a></strong>
                             </h6>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical repairs and maintenance</p>
-                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Emergency shutdowns</p>
+                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical Repairs and Maintenance</p>
+                            <p class="mbr-text mbr-fonts-style mb-3 display-7">Emergency Shutdowns</p>
                             <div class="mbr-section-btn item-footer"><a href="contact" class="btn item-btn btn-primary display-7">Quote</a></div>
                         </div>
                     </div>
