--- a/industrial.html
+++ b/industrial.html
@@ -940,7 +940,7 @@
                         </div>
                         <div class="item-content align-left">
                             <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5">
-                                <strong><a class="text-black fw-bold" href="#">Saftey</a></strong>
+                                <strong><a class="text-black fw-bold" href="#">Safety</a></strong>
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Proof Outlets</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Circuit Breaker Replacements</p>
