--- a/contact.html
+++ b/contact.html
@@ -792,7 +792,7 @@
             <h3 class="mbr-section-title align-center mb-5 mbr-fonts-style display-2 ">
                 <strong>Fill Out Our Form Below</strong>
             </h3>
-            <form action="#" method="post">
+            <form action="https://formspree.io/f/xanwwoyr" method="POST">
                 <div class="form-group">
                     <label for="name">Your Name:</label>
                     <input type="text" id="name" name="name" required>
