--- a/index.html
+++ b/index.html
@@ -837,13 +837,13 @@
         }
     
         .cid-u5TVqzM1Vt .grid-item {
-            flex: 0 0 auto;
+            flex: 0 0;
             scroll-snap-align: start;
-            display: inline-grid;
+            display: flex;
             justify-content: center;
             align-items: center;
-            gap: 0rem;
-            padding: 0rem;
+            gap: 1rem;
+            padding: 1rem;
         }
     
         .cid-u5TVqzM1Vt .grid-item img {
