--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
                     <img src="images/gallery3.jpg">
                 </div>
                 <div class="grid-item">
-                    <img src="images/gallery2.jpg">
+                    <img src="images/gallery5.jpg">
                 </div>
                 <div class="grid-item">
                     <img src="images/gallery0.jpg">
@@ -908,7 +908,16 @@
                     <img src="images/gallery3.jpg">
                 </div>
                 <div class="grid-item">
+                    <img src="images/gallery4.jpg">
+                </div>
+                <div class="grid-item">
                     <img src="images/gallery2.jpg">
+                </div>
+                <div class="grid-item">
+                    <img src="images/gallery6.jpg">
+                </div>
+                <div class="grid-item">
+                    <img src="images/gallery7.jpg">
                 </div>
             </div>
         </div>
