--- a/services.html
+++ b/services.html
@@ -1062,22 +1062,22 @@
                 <div class="col-12 ">
                     <div class="social-row ">
                         <div class="soc-item ">
-                            <a href="# " target="_blank ">
+                            <a href="https://www.facebook.com/profile.php?id=61565336246320" target="_blank ">
                                 <span class="mbr-iconfont socicon socicon-facebook "></span>
                             </a>
                         </div>
                         <div class="soc-item ">
-                            <a href="# " target="_blank ">
+                            <a href="https://x.com/nutekgroup_org" target="_blank ">
                                 <span class="mbr-iconfont socicon-twitter socicon "></span>
                             </a>
                         </div>
                         <div class="soc-item ">
-                            <a href="# " target="_blank ">
+                            <a href="https://www.instagram.com/nutek_group/" target="_blank ">
                                 <span class="mbr-iconfont socicon-instagram socicon "></span>
                             </a>
                         </div>
                         <div class="soc-item ">
-                            <a href="# " target="_blank ">
+                            <a href="https://www.linkedin.com/company/104647270/" target="_blank ">
                                 <span class="mbr-iconfont socicon socicon-linkedin "></span>
                             </a>
                         </div>
