--- a/about.html
+++ b/about.html
@@ -1373,26 +1373,26 @@
                 <h3 class="mbr-section-title align-center mb-5 mbr-fonts-style display-2">
                     <strong>Connect with Us</strong>
                 </h3>
-                <div class="col-12">
-                    <div class="social-row">
-                        <div class="soc-item">
-                            <a href="#" target="_blank">
-                                <span class="mbr-iconfont socicon socicon-facebook"></span>
+                <div class="col-12 ">
+                    <div class="social-row ">
+                        <div class="soc-item ">
+                            <a href="https://www.facebook.com/profile.php?id=61565336246320" target="_blank ">
+                                <span class="mbr-iconfont socicon socicon-facebook "></span>
                             </a>
                         </div>
-                        <div class="soc-item">
-                            <a href="#" target="_blank">
-                                <span class="mbr-iconfont socicon-twitter socicon"></span>
+                        <div class="soc-item ">
+                            <a href="https://x.com/nutekgroup_org" target="_blank ">
+                                <span class="mbr-iconfont socicon-twitter socicon "></span>
                             </a>
                         </div>
-                        <div class="soc-item">
-                            <a href="#" target="_blank">
-                                <span class="mbr-iconfont socicon-instagram socicon"></span>
+                        <div class="soc-item ">
+                            <a href="https://www.instagram.com/nutek_group/" target="_blank ">
+                                <span class="mbr-iconfont socicon-instagram socicon "></span>
                             </a>
                         </div>
-                        <div class="soc-item">
-                            <a href="#" target="_blank">
-                                <span class="mbr-iconfont socicon socicon-linkedin"></span>
+                        <div class="soc-item ">
+                            <a href="https://www.linkedin.com/company/104647270/" target="_blank ">
+                                <span class="mbr-iconfont socicon socicon-linkedin "></span>
                             </a>
                         </div>
                     </div>
