--- a/residential.html
+++ b/residential.html
@@ -710,7 +710,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
-					<a href="https://www.nutekgroup.or">
+					<a href="https://www.nutekgroup.org">
 						<img class="logo-img" src="images/logo.png" style="height: 4.3rem;">
 					</a>
 				</span>
