--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <meta name="description" content="Dealing with electricity and getting quotes is now easier than ever. Find the best deals for your electrical projects.">
 
+    <meta property="og:image" content="https://nutekgroup.org/images/nutekthumbshare.png">
+    <meta property="og:url" content="https://nutekgroup.org">
+    <meta property="og:type" content="website">
+
     <title>Electricity Quotes Available</title>
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
     <link rel="stylesheet" href="assets/parallax/jarallax.css">
