--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         }
         
         .cid-u5TVqzLrxA .dropdown-item:before {
-            font-family: Moririse2 !important;
+            font-family: Mobirise2 !important;
             content: "\e966";
             display: inline-block;
             width: 0;
@@ -1039,7 +1039,7 @@
         
         .cid-u5TVqzNGOH .mbr-iconfont {
             font-size: 1.2rem !important;
-            font-family: 'Moririse2' !important;
+            font-family: 'Mobirise2' !important;
             color: white;
             transition: all 0.3s;
             transform: rotate(180deg);
