--- a/services.html
+++ b/services.html
@@ -59,7 +59,7 @@
         }
         
         .cid-u5TVqzLrxA .dropdown-item:before {
-            font-family: Moririse2 !important;
+            font-family: Mobirise2 !important;
             content: "\e966";
             display: inline-block;
             width: 0;
